--- a/src/_layout.scss
+++ b/src/_layout.scss
@@ -11,7 +11,9 @@
 
 /* display */
 
+.none { display: none; }
 .block { display: block; }
 .inline-block { display: inline-block; }
 .inline { display: inline; }
 .hidden { display: none; }
+.contents {display: contents; }
