--- a/src/_typography.scss
+++ b/src/_typography.scss
@@ -17,3 +17,6 @@
 .text-base { font-size: 1.6rem; }
 
 /* heading sizes are defined in base.scss */
+
+.uppercase { text-transform: uppercase; }
+.no-underline { text-decoration: none; }
