adds some classes. Comments out some classes. Changes docs

--- a/src/_grid.scss
+++ b/src/_grid.scss
@@ -3,6 +3,7 @@
   grid-template-columns: repeat(auto-fill,minmax(var(--column-width, 270px),1fr));
 }
 
+/*
 .gap-sm {}
 .gap-md {}
 .gap-lg {}
@@ -18,6 +19,7 @@
 .col-sm { --column-width: 197px; }
 .col-md { --column-width: 240px; }
 .col-lg { --column-width: 301px; }
+*/
 
 .span2 { grid-column: span 2; }
 .span4 { grid-column: span 4; }
