--- a/src/_spacing.scss
+++ b/src/_spacing.scss
@@ -1,12 +1,130 @@
 /* margins */
 
-.m-center {
+.mx-auto {
   margin-left: auto;
   margin-right: auto;
 }
 
-.m-center { margin: auto; } /* centers a grid item in both directions */
-
+.mxy-auto { margin: auto; } /* centers a grid item in both directions */
 
 .ml-auto { margin-left: auto; } /* push grid item or flex item to the right */
 .mr-auto { margin-right: auto; } /* push grid item or flex item to the left */
+
+/*
+.m0 { margin: 0; }
+.m1 { margin: 1px; }
+.m2 { margin: 2px; }
+.m4 { margin: 4px; }
+.m6 { margin: 6px; }
+.m10 { margin: 10px; }
+.m15 { margin: 15px; }
+.m20 { margin: 20px; }
+.m30 { margin: 30px; }
+.m40 { margin: 40px; }
+.m50 { margin: 50px; }
+.m70 { margin: 70px; }
+
+.mr0 { margin-right: 0; }
+.mr1 { margin-right: 1px; }
+.mr2 { margin-right: 2px; }
+.mr4 { margin-right: 4px; }
+.mr6 { margin-right: 6px; }
+.mr10 { margin-right: 10px; }
+.mr15 { margin-right: 15px; }
+.mr20 { margin-right: 20px; }
+.mr30 { margin-right: 30px; }
+.mr40 { margin-right: 40px; }
+.mr50 { margin-right: 50px; }
+.mr70 { margin-right: 70px; }
+
+.mb0 { margin-bottom: 0; }
+.mb1 { margin-bottom: 1px; }
+.mb2 { margin-bottom: 2px; }
+.mb4 { margin-bottom: 4px; }
+.mb6 { margin-bottom: 6px; }
+.mb10 { margin-bottom: 10px}
+.mb15 { margin-bottom: 15px}
+.mb20 { margin-bottom: 20px}
+.mb30 { margin-bottom: 30px}
+.mb40 { margin-bottom: 40px}
+.mb50 { margin-bottom: 50px}
+.mb70 { margin-bottom: 70px}
+.mb120 { margin-bottom: 120px}
+
+.ml0 { margin-left: 0; }
+.ml1 { margin-left: 1px; }
+.ml2 { margin-left: 2px; }
+.ml4 { margin-left: 4px; }
+.ml6 { margin-left: 6px; }
+.ml10 { margin-left: 10px; }
+.ml15 { margin-left: 15px; }
+.ml20 { margin-left: 20px; }
+.ml30 { margin-left: 30px; }
+.ml40 { margin-left: 40px; }
+.ml70 { margin-left: 70px; }
+
+.p0 { padding: 0; }
+.p1 { padding: 1px; }
+.p2 { padding: 2px; }
+.p4 { padding: 4px; }
+.p6 { padding: 6px; }
+.p10 { padding: 10px; }
+.p15 { padding: 15px; }
+.p20 { padding: 20px; }
+.p25 {padding: 25px; }
+.p30 { padding: 30px; }
+.p40 { padding: 40px; }
+.p70 { padding: 70px; }
+
+.pt0 { padding-top: 0; }
+.pt1 { padding-top: 1px; }
+.pt2 { padding-top: 2px; }
+.pt4 { padding-top: 4px; }
+.pt6 { padding-top: 6px; }
+.pt10 { padding-top: 10px; }
+.pt15 { padding-top: 15px; }
+.pt20 { padding-top: 20px; }
+.pt25 { padding-top: 25px; }
+.pt30 { padding-top: 30px; }
+.pt40 { padding-top: 40px; }
+.pt70 { padding-top: 70px; }
+
+.pr0 { padding-right: 0; }
+.pr1 { padding-right: 1px; }
+.pr2 { padding-right: 2px; }
+.pr4 { padding-right: 4px; }
+.pr6 { padding-right: 6px; }
+.pr10 { padding-right: 10px; }
+.pr15 { padding-right: 15px; }
+.pr20 { padding-right: 20px; }
+.pr25 { padding-right: 25px; }
+.pr30 { padding-right: 30px; }
+.pr40 { padding-right: 40px; }
+.pr70 { padding-right: 70px; }
+
+.pb0 { padding-bottom: 0; }
+.pb1 { padding-bottom: 1px; }
+.pb2 { padding-bottom: 2px; }
+.pb4 { padding-bottom: 4px; }
+.pb6 { padding-bottom: 6px; }
+.pb10 { padding-bottom: 10px; }
+.pb15 { padding-bottom: 15px; }
+.pb20 { padding-bottom: 20px; }
+.pb25 { padding-bottom: 25px; }
+.pb30 { padding-bottom: 30px; }
+.pb40 { padding-bottom: 40px; }
+.pb70 { padding-bottom: 70px; }
+
+.pl0 { padding-left: 0; }
+.pl1 { padding-left: 1px; }
+.pl2 { padding-left: 2px; }
+.pl4 { padding-left: 4px; }
+.pl6 { padding-left: 6px; }
+.pl10 { padding-left: 10px; }
+.pl15 { padding-left: 15px; }
+.pl20 { padding-left: 20px; }
+.pl25 { padding-left: 25px; }
+.pl30 { padding-left: 30px; }
+.pl40 { padding-left: 40px; }
+.pl70 { padding-left: 70px; }
+*/
