adds package.json so that I can publish to NPM. Changes dir structure

--- a/src/partials/_floats.scss
+++ b/src/partials/_floats.scss
@@ -1,7 +1,7 @@
 .float-right { float: right; }
 .float-left { float: left; }
 
-.clearfix &::after {
+.clearfix:after {
   content: "";
   display: table;
   clear: both;
