add info about lack of CSS grid to readme

--- a/src/compile.scss
+++ b/src/compile.scss
@@ -1,13 +1,11 @@
-@import 'partials/base';
-@import 'partials/colors';
-@import 'partials/display';
-@import 'partials/flex';
-@import 'partials/floats';
-@import 'partials/grid';
-@import 'partials/images';
-@import 'partials/misc';
-@import 'partials/overflow';
-@import 'partials/position';
-@import 'partials/sizing';
-@import 'partials/spacing';
-@import 'partials/typography';
+@import "partials/base";
+@import "partials/display";
+@import "partials/flex";
+@import "partials/floats";
+@import "partials/images";
+@import "partials/misc";
+@import "partials/overflow";
+@import "partials/position";
+@import "partials/sizing";
+@import "partials/spacing";
+@import "partials/typography";
